5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1590_2895.log
== TEST (2019-03-20 15:39:18) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh"))
preco = float(input("O valor unitario de cada jogo eh"))
frete = float(input("O valor do frete eh"))
total (valor + preco frete)


-- ERROR:
File "XXXX", line 4
    total (valor + preco frete)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:39:20) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh"))
preco = float(input("O valor unitario de cada jogo eh"))
frete = float(input("O valor do frete eh"))
total (valor + preco frete)


-- EXECUTION TIME:
0.265972
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 4
    total (valor + preco frete)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:39:21) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh"))
preco = float(input("O valor unitario de cada jogo eh"))
frete = float(input("O valor do frete eh"))
total (valor + preco frete)


-- ERROR:
File "XXXX", line 4
    total (valor + preco frete)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:39:26) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh"))
preco = float(input("O valor unitario de cada jogo eh"))
frete = float(input("O valor do frete eh"))
total (valor + preco + frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total (valor + preco + frete)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:39:35) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh"))
preco = float(input("O valor unitario de cada jogo eh"))
frete = float(input("O valor do frete eh"))
total (valor + preco + frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total (valor + preco + frete)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:39:50) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total (valor + preco + frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total (valor + preco + frete)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:40:03) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total (valor + preco + frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total (valor + preco + frete)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:40:47) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor + preco + frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total (valor + preco + frete)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:40:48) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor + preco + frete)


-- EXECUTION TIME:
0.146696
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:40:50) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor + preco + frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total (valor + preco + frete)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:41:03) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor + preco + frete)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total (valor + preco + frete)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:41:04) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor + preco + frete)


-- EXECUTION TIME:
0.139569
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:21) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = valor * preco * frete
total = input
print(total)


-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:43:23) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = valor * preco * frete
total = input
print(total)


-- EXECUTION TIME:
0.1367
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
<built-in function input>
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
<built-in function input>
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
<built-in function input>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:24) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = valor * preco * frete
total = input
print(total)


-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:43:27) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = valor * preco * frete
total = input
print(total)


-- EXECUTION TIME:
0.186792
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
<built-in function input>
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
<built-in function input>
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
<built-in function input>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:56) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = valor * preco * frete
print(total)


-- OUTPUT:
42120.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:43:58) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = valor * preco * frete
print(total)


-- EXECUTION TIME:
0.174522
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
42120.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
63650.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
76991850.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:59) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = valor * preco * frete
print(total)


-- OUTPUT:
42120.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:44:11) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco * frete)
print(total)


-- OUTPUT:
42120.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:44:12) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco * frete)
print(total)


-- EXECUTION TIME:
0.115322
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
42120.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
63650.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
76991850.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:44:12) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco * frete)
print(total)


-- OUTPUT:
42120.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:44:14) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco * frete)
print(total)


-- EXECUTION TIME:
0.146466
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
42120.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
63650.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
76991850.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:44:14) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco * frete)
print(total)


-- EXECUTION TIME:
0.134617
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
42120.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
63650.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
76991850.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:45:57) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco * frete)
print(total)


-- OUTPUT:
42120.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:45:58) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco * frete)
print(total)


-- EXECUTION TIME:
0.17774
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
42120.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
63650.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
76991850.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:47:05) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco + frete)
print(total)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:47:07) 
-- CODE:
valor = float(input("A quantidade de jogos a serem encomendados eh?"))
preco = float(input("O valor unitario de cada jogo eh?"))
frete = float(input("O valor do frete eh?"))
total = (valor * preco + frete)
print(total)


-- EXECUTION TIME:
0.132432
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
